--- a/view/partials/dashboard.html
+++ b/view/partials/dashboard.html
@@ -1,8 +1,88 @@
 <div class="container">
         <div class="row">
+            <div class="col-md-9">        
+            
+                <div class="main box-border">
+                    <div id="mi-slider" class="mi-slider">
+                        <ul>
+
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/Rolex.jpg" alt="img01"><h4>Lujosos</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/relojes.jpg" alt="img02"><h4>Casuales</h4>
+                            </a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/cinturones.jpg" alt="img05"><h4>Cinturones</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/collares.jpg" alt="img06"><h4>Collares</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/aretes.jpg" alt="img07"><h4>Aretes</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/brazalete.jpg" alt="img08"><h4>Pulseras</h4>
+                            </a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/refrigeracion.jfif" alt="img09"><h4>Refrigeracion</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/lavadoras.jpg" alt="img10"><h4>Lavadoras</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/aspiradorass.jpg" alt="img11"><h4>Cuidado del hogar</h4>
+                            </a></li>
+                        </ul>
+                        <nav>
+                            <a href="#">Relojes</a>
+                            <a href="#">Accesorios</a>
+                            <a href="#">Electrodomesticos</a>
+                        </nav>
+                    </div>
+                    
+                </div>
+                <br />
+            </div>
+            
+            <div class="col-md-3 text-center">
+                <div class=" col-md-12 col-sm-6 col-xs-6" >
+                    <div class="offer-text">
+                        29% de descuento
+                    </div>
+                    <div class="thumbnail product-box">
+                        <img src="assets/img/aspiradorastk10.jpg" alt="" />
+                        <div class="caption">
+                            <h3><a href="#">Licuadora K-150 </a></h3>
+                            <p><a href="#">Mas informacion</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-md-12 col-sm-6 col-xs-6">
+                    <div class="offer-text2">
+                        46% de descuento
+                    </div>
+                    <div class="thumbnail product-box">
+                        <img src="assets/img/freidoraquickfry.jpg" alt="" />
+                        <div class="caption">
+                            <h3><a href="#">Freidora de aire</a></h3>
+                            <p><a href="#">Mas informacion</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class = "container">
+        <div class="row">
             <div class="col-md-3">
                 <div>
-                    <a href="#" class="list-group-item active">Celulares
+                    <a href="#" class="list-group-item active" >Celulares
                     </a>
                     <ul class="list-group">
                         <a href="#" class="list-group-item" class="bottom">Iphones
@@ -30,7 +110,6 @@
                         </div>
                     </ul>
                 </div>
-                <!-- /.div -->
                 <div>
                     <a href="#" class="list-group-item active list-group-item-success">Salud y belleza
                     </a>
@@ -52,7 +131,6 @@
                     </div>
                     </ul>
                 </div>
-                <!-- /.div -->
                 <div>
                     <a href="#" class="list-group-item active">Deportes
                     </a>
@@ -79,7 +157,7 @@
                         </div>
                     </ul>
                 </div>
-                <!-- /.div -->
+
                 <div>
                     <a href="#" class="list-group-item active list-group-item-success">Mascotas
                     </a>
@@ -111,21 +189,11 @@
                         </div>
                     </ul>
                 </div>
-                <!-- /.div -->
-                <div>
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-success"><a href="#">New Offer's Coming </a></li>
-                        <li class="list-group-item list-group-item-info"><a href="#">New Products Added</a></li>
-                        <li class="list-group-item list-group-item-warning"><a href="#">Ending Soon Offers</a></li>
-                        <li class="list-group-item list-group-item-danger"><a href="#">Just Ended Offers</a></li>
-                    </ul>
-                </div>
-                <!-- /.div -->
-
             </div>
+</div>-->
             <!-- /.col -->
             <div class="col-md-9">
-                <div>
+                <!--<div>
                     <ol class="breadcrumb">
                         <li><a href="#">Inicio</a></li>
                         <li class="active"><a href="#">Relojes</a></li>
@@ -141,7 +209,7 @@
                 </div>
                 <!-- /.div -->
                 <div class="row">
-                    <div class="btn-group alg-right-pad">
+                    <!--<div class="btn-group alg-right-pad">
                         <button type="button" class="btn btn-default"><strong>10  </strong>articulos</button>
                         <div class="btn-group">
                             <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
@@ -200,83 +268,7 @@
                             <!-- /.col -->
                         </div>
                         <!-- /.row -->
-                        <div class="row">
-                            <a href="index2.php" class="btn btn-primary" role="button">Ver más</a>
-                        </div>
-                        <!-- /.row -->
-                        <div>
-                            <ol class="breadcrumb">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Clothing</a></li>
-                                <li class="active">Men's Clothing</li>
-                            </ol>
-                        </div>
-                        <!-- /.div -->
-                        <div class="row">
-                            <div class="btn-group alg-right-pad">
-                                <button type="button" class="btn btn-default"><strong>3005  </strong>items</button>
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                        Sort Products &nbsp;
-            <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">By Price Low</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">By Price High</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">By Popularity</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">By Reviews</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-                        <div class="row">
-                            <div class="col-md-4 text-center col-sm-6 col-xs-6">
-                                <div class="thumbnail product-box">
-                                    <img src="assets/img/dummyimg.png" alt="" />
-                                    <div class="caption">
-                                        <h3><a href="#">Samsung Galaxy </a></h3>
-                                        <p>Price : <strong>$ 3,45,900</strong>  </p>
-                                        <p><a href="#">Ptional dismiss button </a></p>
-                                        <p>Ptional dismiss button in tional dismiss button in   </p>
-                                        <p>
-                                            <a href="#" class="btn btn-success" role="button">Add To Cart</a>
-                                            <a href="#" class="btn btn-primary" role="button">See Details</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-md-4 text-center col-sm-6 col-xs-6">
-                                <div class="thumbnail product-box">
-                                    <img src="assets/img/dummyimg.png" alt="" />
-                                    <div class="caption">
-                                        <h3><a href="#">Samsung Galaxy </a></h3>
-                                        <p>Price : <strong>$ 3,45,900</strong>  </p>
-                                        <p><a href="#">Ptional dismiss button </a></p>
-                                        <p>Ptional dismiss button in tional dismiss button in   </p>
-                                        <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-md-4 text-center col-sm-6 col-xs-6">
-                                <div class="thumbnail product-box">
-                                    <img src="assets/img/dummyimg.png" alt="" />
-                                    <div class="caption">
-                                        <h3><a href="#">Samsung Galaxy </a></h3>
-                                        <p>Price : <strong>$ 3,45,900</strong>  </p>
-                                        <p><a href="#">Ptional dismiss button </a></p>
-                                        <p>Ptional dismiss button in tional dismiss button in   </p>
-                                        <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.col -->
-                        </div>
+                        
                         <!-- /.row -->
                         <div class="row">
                             <ul class="pagination alg-right-pad">
