Agregado el login

--- a/view/partials/menu.html
+++ b/view/partials/menu.html
@@ -17,7 +17,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Track Order</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#modalLogin">Login</a></li>
                     <li><a href="#">Signup</a></li>
 
                     <li class="dropdown">
