Filtro de Categoria Agregado

--- a/view/partials/menu.html
+++ b/view/partials/menu.html
@@ -48,7 +48,7 @@
                 <form class="navbar-form navbar-right" name="frmSearch" method="POST" action="index.php?modulo=producto&controlador=Producto&funcion=filter">
                     <div class = "form-group">
                         <input type="text" name="searchProd" id="searchProd" class="form-control" placeholder="Buscar producto">
-                        <button type="button" name="btnSearch" id="btnSearch" class="btn btn-primary searchCategory"><i class="bi-search me-1"></i>Buscar</button>
+                        <button type="button" name="btnSearch" id="btnSearch" class="btn btn-primary searchDescProd" data-origen="btn"><i class="bi-search me-1"></i>Buscar</button>
                     </div>
                 </form>
             </div>
