--- a/view/partials/filtro.html
+++ b/view/partials/filtro.html
@@ -2,71 +2,90 @@
         <div class="row">
             <div class="col-md-3">
                 <div>
-                    <a href="#" class="list-group-item active searchCategory">Tecnologia
-                    </a>
+                    <a href="#" class="list-group-item active searchCategory">Tecnologia</a>
                     <ul class="list-group">
 
-                        <li class="list-group-item">Mobile
-                            <span class="label label-primary pull-right">234</span>
-                        </li>
-                        <li class="list-group-item">Computers
-                      <span class="label label-success pull-right">34</span>
-                        </li>
-                        <li class="list-group-item">Tablets
-                         <span class="label label-danger pull-right">4</span>
-                        </li>
-                        <li class="list-group-item">Appliances
-                             <span class="label label-info pull-right">434</span>
-                        </li>
-                        <li class="list-group-item">Games & Entertainment
-                             <span class="label label-success pull-right">34</span>
-                        </li>
+                        <li class="list-group-item searchDescProd" data-origen="subcategory">ACER</li>
+                        <li class="list-group-item">Ryzen</li>
+                        <li class="list-group-item">Samsung</li>
+                </div>
+                <!-- /.div -->
+                <div>
+                    <a href="#" class="list-group-item active list-group-item-success searchCategory">Celulares</a>
+                    <ul class="list-group">
+
+                        <li class="list-group-item">Xiaomi</li>
+                        <li class="list-group-item">iPhone</li>
                     </ul>
                 </div>
                 <!-- /.div -->
                 <div>
-                    <a href="#" class="list-group-item active list-group-item-success searchCategory">Celulares
-                    </a>
+                    <a href="#" class="list-group-item active searchCategory">Accesorios</a>
+                    <ul class="list-group">
+                        <li class="list-group-item">Montblanc</li>
+                        <li class="list-group-item">Pandora</li>
+                    </ul>
+                </div>
+                <!-- /.div -->
+
+                 <div>
+                    <a href="#" class="list-group-item active list-group-item-success searchCategory">Relojes</a>
                     <ul class="list-group">
 
-                        <li class="list-group-item">Men's Clothing
-                             <span class="label label-danger pull-right">300</span>
-                        </li>
-                        <li class="list-group-item">Women's Clothing
-                             <span class="label label-success pull-right">340</span>
-                        </li>
-                        <li class="list-group-item">Kid's Wear
-                             <span class="label label-info pull-right">735</span>
-                        </li>
+                        <li class="list-group-item">Rolex</li>
+                        <li class="list-group-item">Invicta</li>
+                        <li class="list-group-item">Casio</li>
 
                     </ul>
                 </div>
                 <!-- /.div -->
                 <div>
-                    <a href="#" class="list-group-item active">Accessaries & Extras
-                    </a>
+                    <a href="#" class="list-group-item active searchCategory">Electrodomesticos</a>
                     <ul class="list-group">
-                        <li class="list-group-item">Mobile Accessaries
-                             <span class="label label-warning pull-right">456</span>
-                        </li>
-                        <li class="list-group-item">Men's Accessaries
-                             <span class="label label-success pull-right">156</span>
-                        </li>
-                        <li class="list-group-item">Women's Accessaries
-                             <span class="label label-info pull-right">400</span>
-                        </li>
-                        <li class="list-group-item">Kid's Accessaries
-                             <span class="label label-primary pull-right">89</span>
-                        </li>
-                        <li class="list-group-item">Home Products
-                             <span class="label label-danger pull-right">90</span>
-                        </li>
-                        <li class="list-group-item">Kitchen Products
-                             <span class="label label-warning pull-right">567</span>
-                        </li>
+                        <li class="list-group-item">Neveras HACEB</li>
+                        <li class="list-group-item">Televisores LG</li>
+                        <li class="list-group-item">Whirlpool</li>
                     </ul>
                 </div>
                 <!-- /.div -->
+                <div>
+                    <a href="#" class="list-group-item active list-group-item-success searchCategory">Mascotas</a>
+                    <ul class="list-group">
+
+                        <li class="list-group-item">Pedigree</li>
+                        <li class="list-group-item">Dog Chow</li>
+                    </ul>
+                </div>
+                <!-- /.div -->
+
+                <div>
+                    <a href="#" class="list-group-item active searchCategory">Deportes</a>
+                    <ul class="list-group">
+                        <li class="list-group-item">Adidas</li>
+                        <li class="list-group-item">Reebook</li>
+                        <li class="list-group-item">NIKE</li>
+                    </ul>
+                </div>
+
+                <!-- /.div -->
+                <div>
+                    <a href="#" class="list-group-item active list-group-item-success searchCategory">Cosmeticos</a>
+                    <ul class="list-group">
+
+                        <li class="list-group-item">Natura</li>
+                        <li class="list-group-item">AVON</li>
+                        <li class="list-group-item">ESIKA</li>
+
+                    </ul>
+                </div>
+                <!-- /.div -->
+                <div>
+                    <a href="#" class="list-group-item active searchCategory">Hogar</a>
+                    <ul class="list-group">
+                        <li class="list-group-item">P&G</li>
+                        <li class="list-group-item">CORONA</li>
+                    </ul>
+                </div>
                 <div>
                     <ul class="list-group">
                         <li class="list-group-item list-group-item-success"><a href="#">New Offer's Coming </a></li>
