Agregado el botón de catalogo

--- a/view/partials/menu.html
+++ b/view/partials/menu.html
@@ -35,6 +35,13 @@
                         </ul>
                     </li>
                 </ul>
+                <form class="navbar-form navbar-right">
+                    <div class="form-group">
+                        <button type="button" name="btnSearch" id="btnSearch" class="btn btn-primary searchCategory"><i class="bi-search me-1"></i>
+                            Catalogo de productos
+                        </button>
+                    </div>
+                </form>
                 
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
